# ParkFlow-AI

./: .gitignore  PRD.md  README.md  data_preprocessing.md  feat.md  final_deliverables.md  pipeline.md  pyproject.toml  requirements.txt  updated.md
.streamlit/: config.toml
app/: streamlit_app.py
artifacts/: current_hotspots.csv  displacement.csv  economic_impact.csv  feature_importance.csv  forecast_timeline.csv  future_forecast.csv  junction_risk.csv  metrics.json  model.joblib  patrol_plan.csv  patrol_routes.csv  repeat_offenders.csv  shap_global.csv  shap_reasons.csv  top_offenders.csv  zone_metadata.csv  zone_repeat_offenders.csv
config/: config.yaml
docs/: PRD.md  updated.md
src/parkflow/: __init__.py  analytics.py  baseline.py  cli.py  config.py  displacement.py  economics.py  evaluation.py  explain.py  features.py  intelligence.py  io.py  logging_utils.py  model.py  operations.py  pipeline.py  preprocessing.py  schema.py  spatial.py
tests/: conftest.py  test_displacement.py  test_economics.py  test_features.py  test_forecast_horizon.py  test_intelligence.py  test_operations.py  test_preprocessing.py  test_routing.py
